@@ -7,6 +7,8 @@ CHANGES
 ------
 
 * Issue #258: Workaround a cache issue
+* Issue #260: distribute_setup.py now accepts the --user parameter for
+  Python 2.6 and later.
 
 ------
 0.6.24
